--- a/estilos.css
+++ b/estilos.css
@@ -3,51 +3,37 @@
     padding: 0;
 }
 
-#unico{
-    color: rgb(45, 186, 221);
+body{
+    background-color : #000012;
 }
 
-.multiusos{
-    font-size: 20px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    width: 640px;
-    
-}
-
-.otracosa{
-    color: rgb(45, 186, 221);
-}
-
-footer{
-    width: 100%;
-    height: 50px;
-    position: absolute;
-    bottom: 0;
-    font-size: 14px;
-    background-color: #f2f2f2;
-    border-top: 1px solid #e4e4e4;
-    text-align: center;
-}
-
-header{
-    text-align: center;
-    margin-bottom: 40px;
-}
-body {
-    background-color: #000012
-}
-
-.Titulo {
+.Titulo{
     border-style:inset;
     border-color:rgb(45, 186, 221);
-    
     color: rgb(252, 218, 25);
-    font-family:Georgia, Times, 'Times New Roman', serif;
-    
+    font-family:Georgia, Times, 'Times New Roman', serif;  
 }
-.AC80-imagen {
-    border-radius: 110px;
+
+.AC80-imagen{
+    border-radius: 50px;
     border-style:inset;
     border-color:rgb(45, 186, 221);
     width: 600px;
+}
+
+.texto-Principal{
+    text-align: center;
+}
+
+.imagen-div{
+    text-align: center;
+}
+
+.Text-Main{
+    color: blue
+}
+
+.Titulo{
+    text-align: center;
+    color: blue;
 }
