--- a/estilos.css
+++ b/estilos.css
@@ -7,12 +7,16 @@ body{
     background-color : #000012;
 }
 
+header{
+    text-align: center;
+}
+
 .Titulo{
     border-style:inset;
     border-color:rgb(45, 186, 221);
     color: rgb(252, 218, 25);
     font-family:Georgia, Times, 'Times New Roman', serif;
-    text-align: center;
+    display: inline-block;
 }
 
 .AC80-imagen{
