--- a/estilos.css
+++ b/estilos.css
@@ -17,12 +17,14 @@ header{
     color: rgb(252, 218, 25);
     font-family:Georgia, Times, 'Times New Roman', serif;
     display: inline-block;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .AC80-imagen{
     border-radius: 50px;
     border-style:inset;
-    border-color:rgb(45, 186, 221);
+    border-color:rgb(226, 220, 42);
     width: 600px;
 }
 
@@ -35,5 +37,5 @@ header{
 }
 
 .Text-Main{
-    color: blue
+    color: blue;
 }
