--- a/estilos.css
+++ b/estilos.css
@@ -5,6 +5,7 @@
 
 body{
     background-color : #000012;
+    font-family: 'Blinker', sans-serif;
 }
 
 header{
@@ -15,7 +16,6 @@ header{
     border-style:inset;
     border-color:rgb(45, 186, 221);
     color: rgb(252, 218, 25);
-    font-family:Georgia, Times, 'Times New Roman', serif;
     display: inline-block;
     padding: 10px;
     margin-bottom: 10px;
@@ -28,14 +28,20 @@ header{
     width: 600px;
 }
 
-.texto-Principal{
-    text-align: center;
-}
-
 .imagen-div{
     text-align: center;
 }
 
 .Text-Main{
-    color: blue;
+    color: rgb(233, 233, 233);
+}
+
+.contenedor{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.3);
+    margin-top: 25px;
 }
